@@ -6,29 +6,29 @@ class ConcreteProduct implements Product {}
 
 class Creator<Product> {
 
-    private Class<Product> c;
+  private Class<Product> c;
 
-    public Creator(Class<Product> c) { this.c=c; }
+  public Creator(Class<Product> c) { this.c=c; }
 	
-    public Product create() {
-	try {
-	    return c.newInstance();
-	} catch (Exception e) {
+  public Product create() {
+  	try {
+	    return c.getDeclaredConstructor().newInstance();
+	  } catch (Exception e) {
 	    System.out.println(e);
-	}
-	return null;
-    }
+	  }
+	  return null;
+  }
 
 }
 
 public class TryFactory2 {
 
-    public static void main(String[] args) {
-	Creator<ConcreteProduct> creator=
+  public static void main(String[] args) {
+	  Creator<ConcreteProduct> creator=
 	    new Creator<ConcreteProduct>(ConcreteProduct.class);
-	// ...
-	Product product=creator.create();
-	System.out.println(product);
-    }
+	  // ...
+  	Product product=creator.create();
+	  System.out.println(product);
+  }
 
 }
